@@ -2,6 +2,7 @@
 
 - Add support for per-request timeouts in the http client
 - Add support for per-request max content length to the http client
+- Introduce modes for processing X-Forwarded-* headers on the server
 
 252
 
